services-and-networking/network-policies/services.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: g2-svc
  name: g2-svc
  namespace: na
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: g2
  type: ClusterIP
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: ssg-svc
  name: ssg-svc
  namespace: na
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: ssg
  type: ClusterIP
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: karminecorp-svc
  name: karminecorp-svc
  namespace: europe
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: karminecorp
  type: ClusterIP
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: moist-svc
  name: moist-svc
  namespace: europe
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: moist
  type: ClusterIP
status:
  loadBalancer: {}
