services-and-networking/network-policies/deny-all-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: deny-all-policy
    namespace: na
spec:
    podSelector: {}
    policyTypes:
        - Ingress
        - Egress
